# neural_decoding_imagined_handwriting

./: .gitignore  README.md  RESULTS.md  benchmark_colab.ipynb  download_data.sh  pyproject.toml  requirements.txt  run_benchmark.py
alignment/: __init__.py  gaussian_hmm.py  poisson_hmm.py
benchmarks/: __init__.py  compare.py  evaluate.py
data/: __init__.py  loader.py  preprocessing.py
decoders/: __init__.py  base_decoder.py  ctc_decoder.py  rcnn_decoder.py  rnn_decoder.py  transformer_decoder.py
